<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/race"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/m_10"/>

    <Button
        android:id="@+id/start_race_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_race"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stop_race_button"
        android:layout_marginTop="@dimen/m_14"/>

    <Button
        android:id="@+id/stop_race_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_race"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        app:layout_constraintStart_toEndOf="@+id/start_race_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/m_18"/>

    <TextView
        android:id="@+id/horce_1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horse1"
        android:textColor="@color/vermelho"
        app:layout_constraintTop_toBottomOf="@+id/start_race_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/m_18"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/horse_1_progress"
        style="@style/Widget.MaterialComponents.LinearProgressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/vermelho"
        app:layout_constraintTop_toBottomOf="@+id/horce_1_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/m_10"/>

    <TextView
        android:id="@+id/horse_2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horse2"
        android:textColor="@color/verde"
        app:layout_constraintTop_toBottomOf="@+id/horse_1_progress"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/m_18"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/horse2_progress"
        style="@style/Widget.MaterialComponents.LinearProgressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/verde"
        app:layout_constraintTop_toBottomOf="@+id/horse_2_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/m_10"/>

    <TextView
        android:id="@+id/winner_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/winner2"
        android:textColor="@color/vermelho"
        android:textSize="@dimen/font_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/winner_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/winner2"
        android:textColor="@color/verde"
        android:textSize="@dimen/font_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>